--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ItayLevy1.github.io/weather-app",
+  "homepage": "http://ItayLevy1.github.io/weather-app",
   "name": "weather-app",
   "private": true,
   "version": "0.0.0",
